feat: Criação da classe de serviço no front para acesar os endpoints de cursos